# ASPIRE-v2

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  nginx.conf  pyproject.toml
src/aspire_v2/: manage.py
src/aspire_v2/accounts/: admin.py  forms.py  models.py  urls.py  views.py
src/aspire_v2/accounts/migrations/: 0001_initial.py  0002_alter_user_managers.py  0003_alter_user_options_remove_user_date_joined_and_more.py
src/aspire_v2/accounts/templates/accounts/: logged_out.html  login.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  signup.html  user_delete_confirm.html  user_detail.html
src/aspire_v2/aspire_v2/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
src/aspire_v2/core/: consumers.py  forms.py  models.py  routing.py  tasks.py  urls.py  views.py
src/aspire_v2/core/lib/: measures.py
src/aspire_v2/core/lib/analyses/: __init__.py  documents_retrieved_by_all_systems.py  experimental_evaluation.py  mock.py  mock2.py  mock3.py  overall_retrieval_characteristics.py  positional_distribution.py  precision_recall_curve.py  relevance_judgments_for_multiple_queries.py  relevance_judgments_per_query.py  (+2 more)
src/aspire_v2/core/migrations/: 0001_initial.py  0002_analysisresult_result.py  0003_report_author.py  0004_remove_analysisresult_analysis_type.py  0005_analysisresult_analysis_type.py  0006_retrievaltask_retrievalrun.py  0007_alter_retrievaltask_description.py  0008_alter_retrievalrun_description_and_more.py  0009_report_description_report_report_type.py  0010_alter_retrievalrun_file_alter_retrievaltask_qrels_and_more.py  0011_measurevalue.py  0012_retrievaltask_max_relevance.py  0013_remove_retrievaltask_max_relevance.py  0014_report_pdf.py
src/aspire_v2/core/templatetags/: add_class.py
src/aspire_v2/frontend/: package-lock.json  package.json  tsconfig.json
src/aspire_v2/resources/: forms.py  models.py  urls.py  views.py
src/aspire_v2/resources/migrations/: 0001_initial.py  0002_alter_resourcefile_file.py  0003_resourcefile_date.py  0004_resourcefile_author.py
src/aspire_v2/templates/base/: auth.html  base.html
src/aspire_v2/templates/includes/: pagination.html
src/aspire_v2/templates/public/: index.html
(+49 files in other folders)
